--- a/pages/home.html
+++ b/pages/home.html
@@ -1,7 +1,15 @@
 ---
 layout: default
+permalink: /
+hero:
+  image: /assets/img/kites.jpg
+  callout:
+    text: "Building and using evidence to better serve the public"
+  button:
+    text: Learn more
+    href: /about/
+class: page-home
 ---
-
 {% include components/hero.html %}
 
 {% if page.tagline and page.intro %}
