--- a/pages/home.html
+++ b/pages/home.html
@@ -33,7 +33,8 @@ page.tagline and page.intro %}
       <p> Based at the General Services Administration (GSA), OES is a team of interdisciplinary experts that works across government to help agencies build and use evidence. To date, OES has completed over 70 randomized evaluations with dozens of agency partners. OES follows the best practices in social science research to build evidence in order to be a leader in transparency and accountability.
       </p>
       <center>
-        <img src="{{ '/assets/img/icons/build-icon.png' | prepend: site.baseurl }}" height="300" width="300"/><img src="{{ '/assets/img/icons/use-icon2.png' | prepend: site.baseurl }}" height="300" width="300"/>
+        <img src="{{ '/assets/img/icons/build-icon.png' | prepend: site.baseurl }}" height="300" width="300"/>
+        <img src="{{ '/assets/img/icons/use-icon2.png' | prepend: site.baseurl }}" height="300" width="300"/>
       </center>
     </div>
   </div>
