--- a/pages/Resources/methods.html
+++ b/pages/Resources/methods.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: OES Evaluation Process
-permalink: /evaluationprocess/
+permalink: /methods/
 image:
 image_full: true
 class:
