project card stragglers

--- a/pages/home.html
+++ b/pages/home.html
@@ -48,7 +48,7 @@ page.tagline and page.intro %}
         <h2>Featured Projects</h2>
         <div class="grid-row grid-gap-lg">
           {% for project in featuredprojects %}
-            {% include projects.html %}
+            {% include project-card.html %}
           {%
       endfor %}
         </div>
